# fontforge-variable-font

./: LICENSE  README.md  fontforge_hello.py  fontforge_variable_font.py  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
fontforgeVF/: __init__.py  __main__.py  delete.py  design_axes.py  export.py  instance.py  language.py  load.py  utils.py
fontforgeVF/translation/: __init__.py  de.py  es.py  fr.py  it.py  ja.py  ko.py  zh_CN.py  zh_TW.py
test/: test_design_axes.py  test_export.py  test_language.py  test_utils.py
