[metadata]
name = fontforge_variable_font
version = 0.0.0
author = MihailJP
author_email = mihailjp@gmail.com
description = A FontForge_plugin to create a variable font
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MihailJP/fontforge-variable-font
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Text Processing :: Fonts

[options]
py_modules = fontforgeVF
python_requires = >=3.8

[options.entry_points]
fontforge_plugin =
    Variable Font = fontforgeVF.__main__
