[metadata]
name = fontforge_variable_font
version = 0.2.0-1
author = MihailJP
author_email = mihailjp@gmail.com
description = A FontForge_plugin to create a variable font
license = MIT
license_files =
    LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MihailJP/fontforge-variable-font
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Text Processing :: Fonts

[options]
packages = fontforgeVF
python_requires = >=3.10
install_requires =
    fonttools
    fontmake

[options.entry_points]
fontforge_plugin =
    Variable Font = fontforgeVF.__main__
